--- a/src/assets/notifications/TaskAssigned.html
+++ b/src/assets/notifications/TaskAssigned.html
@@ -112,7 +112,7 @@
 		</div>
 		<div class="body">
 			<div class="bodytitle">
-				AVISO DE ACUTALIZACIÓN
+				AVISO DE ACTUALIZACIÓN
 			</div>
 			<div class="bodyContent">
 				<p>
