--- a/src/assets/notifications/TaskRejected.html
+++ b/src/assets/notifications/TaskRejected.html
@@ -123,7 +123,7 @@
 					Haga click en el botón que esta debajo para ser redirccionado
 				</p>
 				<p>
-					<a href="{{LINK_TO_PROMO}}" type="button" title="Abrir promoción" class="linkButton" style="width: 180px;">Nueva promoción</a>
+					<a href="{{LINK_TO_PROMO}}" type="button" title="Abrir promoción" class="linkButton" style="width: 180px;">Abrir promoción</a>
 				</p>
 				<div class="disclaimer">
 					No respondas este mensaje. Esta direccion de correos electrónicos, por lo que no recibirás una respuesta.
