--- a/src/assets/notifications/WorkflowStarted.html
+++ b/src/assets/notifications/WorkflowStarted.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Notificación de flujo de aprobación completado - {{PROMO_ID}}</title>
+	<title>Confirmación inicio de flujo de aprobación - {{PROMO_ID}}</title>
 	<style>
 		body {
 			margin: 0;
@@ -166,7 +166,7 @@
 			<div class="headerTitle">
 				Trade Promotions Management
 				<div class="headerSecondTitle">
-					Notificación de flujo de aprobación completado
+					Confirmación inicio de flujo de aprobación
 				</div>
 			</div>
 		</div>
@@ -176,7 +176,8 @@
 					Hola, {{KAM}}:
 				</p>
 				<p>
-					La actividad promocional para el cliente {{CLIENT_NAME}}, para la marca {{BRAND}} ha sido aprobada en su totalidad y puede ejecutarse.
+					Tu actividad promocional para {{CLIENT_NAME}} para la marca {{BRAND}} ha sido enviada para
+					aprobación.
 				</p>
 				<p class="promoTableTitle">
 					DETALLES DE LA PROMOCIÓN
