Removing brando from template

--- a/src/assets/notifications/TaskAssigned.html
+++ b/src/assets/notifications/TaskAssigned.html
@@ -176,7 +176,7 @@
 					Hola, {{TASK_APPROVER}}:
 				</p>
 				<p>
-					Tienes una nueva actividad promocional para aprobar para el cliente {{CLIENT_NAME}}, para la marca {{BRAND}} con las siguientes condiciones:
+					Tienes una nueva actividad promocional para aprobar para el cliente {{CLIENT_NAME}}, con las siguientes condiciones:
 				</p>
 				<p class="promoTableTitle">
 					DETALLES DE LA PROMOCIÓN
