--- a/src/assets/notifications/WorkflowStarted.html
+++ b/src/assets/notifications/WorkflowStarted.html
@@ -176,8 +176,7 @@
 					Hola, {{KAM}}:
 				</p>
 				<p>
-					Tu actividad promocional para {{CLIENT_NAME}} para la marca {{BRAND}} ha sido enviada para
-					aprobación.
+					Tu actividad promocional para {{CLIENT_NAME}} ha sido enviada para aprobación.
 				</p>
 				<p class="promoTableTitle">
 					DETALLES DE LA PROMOCIÓN
