--- a/src/assets/notifications/TaskApproved.html
+++ b/src/assets/notifications/TaskApproved.html
@@ -176,7 +176,7 @@
 					Hola, {{KAM}}:
 				</p>
 				<p>
-					La actividad promocional para el cliente {{CLIENT_NAME}}, para la marca {{BRAND}} ha sido aprobada por {{TASK_APPROVER}}:
+					La actividad promocional para el cliente {{CLIENT_NAME}}, ha sido aprobada por {{TASK_APPROVER}}:
 				</p>
 				<p class="promoTableTitle">
 					DETALLES DE LA PROMOCIÓN
