--- a/src/assets/notifications/WorkflowApproved.html
+++ b/src/assets/notifications/WorkflowApproved.html
@@ -176,7 +176,7 @@
 					Hola, {{KAM}}:
 				</p>
 				<p>
-					La actividad promocional para el cliente {{CLIENT_NAME}}, para la marca {{BRAND}} ha sido aprobada en su totalidad y puede ejecutarse.
+					La actividad promocional para el cliente {{CLIENT_NAME}}, ha sido aprobada en su totalidad y puede ejecutarse.
 				</p>
 				<p class="promoTableTitle">
 					DETALLES DE LA PROMOCIÓN
