--- a/src/assets/notifications/WorkflowStarted.html
+++ b/src/assets/notifications/WorkflowStarted.html
@@ -10,11 +10,11 @@
 		}
 
 		.wrapper {
-			width: 650px;
+			min-width: 480px;
 		}
 
 		.header {
-			height: 101px;
+			min-height: 101px;
 			background: var(--primary-color) 0% 0% no-repeat padding-box;
 			background: #e1dfdd 0% 0% no-repeat padding-box;
 			opacity: 1;
@@ -140,6 +140,7 @@
 
 		.promoTable {
 			width: 100%;
+			max-width: 700px;
 		}
 
 		.promoTableHeader {
