--- a/src/assets/notifications/TaskRejected.html
+++ b/src/assets/notifications/TaskRejected.html
@@ -224,7 +224,7 @@
 							{{ADDITIONAL_INVESTMENT}}
 						</td>
 						<td class="content">
-							{{ROI}}
+							{{CURRENCY_SYMBOL}}{{ROI}}
 						</td>
 					</tr>
 				</table>
