--- a/src/assets/notifications/TaskApproved.html
+++ b/src/assets/notifications/TaskApproved.html
@@ -221,10 +221,10 @@
 					</tr>
 					<tr>
 						<td class="content">
-							{{ADDITIONAL_INVESTMENT}}
+							{{CURRENCY_SYMBOL}}{{ADDITIONAL_INVESTMENT}}
 						</td>
 						<td class="content">
-							{{CURRENCY_SYMBOL}}{{ROI}}
+							{{ROI}}
 						</td>
 					</tr>
 				</table>
